several fixes and documentation.
* added debug logs.
* fixed syntax mistakes on css.
* made link texts bold.
* prevented scrollbar appearance in sharebox at low resolutions.
* fixed text positioning problem in opera.
* filled README with a description, todo and known bugs entries.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,22 +1,23 @@
 body { background-image:url('/static/images/grass.jpg'); }
 div { float: left; }
 img { margin: 10px 10px 10px 10px}
-#soccerfield { background-image:url('/static/images/soccer-field-empty.png');)}
-#sketchpad { position: absolute;)}
+#soccerfield { background-image:url('/static/images/soccer-field-empty.png'); }
+#sketchpad { position: absolute; }
 .playername { font-size: 14px; position: absolute; }
 .mydiv {  margin-left: auto; margin-right: auto;  }
 #links {width:780;}
-#sharelink {float:right;color:white;cursor:pointer;}
-#resetlink {float:left;color:white;cursor:pointer;}
+#sharelink {float:right;color:white;font-weight:bold;cursor:pointer;}
+#resetlink {float:left;color:white;font-weight:bold;cursor:pointer;}
 #sharebox {display:none;}
-#sharebox input {width:600px;}
+#sharebox input {width:580px; margin-left:5px;margin-right:5px;margin-top:10px;margin-bottom:10px;}
 
 /* Overlay */
 #simplemodal-overlay {background-color:#000; cursor:wait;}
 
 /* Container */
-#simplemodal-container {height:30px; width:600px; color:#bbb; background-color:#080; border:4px solid #FFF; padding:12px;}
+#simplemodal-container {height:60px; width:600px; color:#bbb; background-color:#080; border:4px solid #FFF; padding:12px;}
 #simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; margin-bottom:12px; padding:4px 6px 6px;}
 #simplemodal-container a {color:#ddd;}
 #simplemodal-container a.modalCloseImg {background:url(/static/images/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
+#simplemodal-container div.simplemodal-wrap {overflow:hidden !important}
 #simplemodal-container #basic-modal-content {padding:8px;}
